--- a/style.css
+++ b/style.css
@@ -87,6 +87,43 @@ section,
     transform: translateY(0);
 }
 
+/* modal window */
+
+/* .mob-menu {
+    display: none;
+} */
+
+#modal_menu__wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    display: none;
+}
+
+.modal_menu__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80%;
+}
+
+#close {
+    display: flex;
+    color: #000000;
+    font-size: 5rem;
+    justify-content: flex-end;
+    align-items: center;
+    line-height: 0.6;
+    cursor: pointer;
+}
+
 /* hero */
 .hero-bg {
     background-image: url(./images/hero-banner.png);
@@ -318,7 +355,7 @@ input[type="range"]:focus::-moz-range-thumb {
 }
 
 /* for whom */
-.parent {
+.for-whom__cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -326,35 +363,27 @@ input[type="range"]:focus::-moz-range-thumb {
     grid-row-gap: 1.375rem;
     }
     
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 1 / 3 / 2 / 5; }
-    .div4 { grid-area: 2 / 1 / 3 / 3; }
-    .div5 { grid-area: 2 / 3 / 3 / 4; }
-    .div6 { grid-area: 2 / 4 / 3 / 5; }
+    .card1 { grid-area: 1 / 1 / 2 / 2; }
+    .card2 { grid-area: 1 / 2 / 2 / 3; }
+    .card3 { grid-area: 1 / 3 / 2 / 5; }
+    .card4 { grid-area: 2 / 1 / 3 / 3; }
+    .card5 { grid-area: 2 / 3 / 3 / 4; }
+    .card6 { grid-area: 2 / 4 / 3 / 5; }
 
 .for-whom {
     padding: 5rem 2.5rem;
 }
 
-.div-big,
-.div-small {
+.for-whom__card-big,
+.for-whom__card-small {
     position: relative;
 }
 
-.div-big p,
-.div-small p {
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
-}
-
-.div-img {
+.for-whom__card-img {
     width: 100%;
     height: 100%;
     border-radius: 16px;
 }
-
 
 .for-whom__header {
     color: #000000;
@@ -365,16 +394,14 @@ input[type="range"]:focus::-moz-range-thumb {
     width: 67%;
 }
 
-.for-whom__cards {
-    display: flex;
-    gap: 1.5rem;
-}
-
 .for-whom__card-text {
     color: #ffffff;
     font-weight: 600;
     font-size: 1.5rem;
     line-height: 2.063rem;
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
 }
 
 /* faq */
@@ -613,4 +640,19 @@ form {
     font-size: 1.25rem;
     line-height: 1.5rem;
     color: #ffffff;
+}
+
+.form__container-title_padding {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.padding {
+    padding-bottom: 0.875rem;
+    padding-top: 1.313rem;
+}
+
+.modal_menu-form__img {
+    height: 438px;
+    right: 5.668rem;
 }
