--- a/style.css
+++ b/style.css
@@ -335,7 +335,6 @@ input[type="range"]:focus::-webkit-slider-thumb {
 /* дорожка слайдера */
 input[type="range"]::-moz-range-track {
     background-color: #000000;
-    ;
     border-radius: 0.5rem;
     height: 0.5rem;
 }
@@ -780,7 +779,8 @@ form {
         gap: 0.5rem;
     }
 
-    .header__logo-text {
+    .header__logo-text,
+    .footer__logo-text {
         font-size: 1.1rem;
         line-height: 1.5rem;
     }
@@ -801,6 +801,152 @@ form {
         width: 100%;
         padding-left: 1.688rem;
         padding-right: 1.688rem;
+    }
+
+    .modal_menu-form__img {
+        display: none;
+    }
+
+    .footer-phone__group-text {
+        font-size: 0.9rem;
+    }
+
+    .footer-phone__group-img {
+        width: 22px;
+    }
+
+    .padding {
+        padding-top: 0.9rem;
+    }
+
+    .hero__text {
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+    }
+
+    .hero__group {
+        padding: 4.25rem 0 4.25rem 2.5rem;
+    }
+
+    .hero__btn {
+        font-size: 1rem;
+        padding: 0.738rem 1.5rem;
+    }
+
+    .description,
+    .advantages,
+    .price-container,
+    .price,
+    .for-whom,
+    .faq,
+    .form,
+    .footer {
+        padding: 1.5rem 0.5rem;
+    }
+
+    .advantages-header,
+    .tab-text,
+    .for-whom__header,
+    .faq__title {
+        font-size: 1.5rem;
+        line-height: 1.438rem;
+    }
+
+    .advantages__card-img {
+        width: 30px;
+    }
+
+    .advantages__card-text {
+        font-size: 0.8rem;
+        line-height: 1rem;
+        text-align: center;
+    }
+
+    .advantages__card {
+        flex-direction: column;
+        width: 46%;
+    }
+
+    .slider__input,
+    #days,
+    #orders,
+    #salary {
+        font-size: 1rem;
+    }
+
+    .price-group {
+        padding-top: 1rem;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+        height: 1.3rem;
+        width: 1.3rem;
+        margin-top: -8px;
+    }
+
+    .faq__header {
+        font-size: 0.9rem;
+        line-height: 1rem;
+    }
+
+    .faq__answer {
+        font-size: 0.8rem;
+        line-height: 1rem;
+    }
+
+    .faq__list {
+        gap: 0.9rem;
+    }
+
+    .form__img {
+        display: none;
+    }
+
+    .form__container-title {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    .footer {
+        flex-direction: column;
+        gap: 0.8rem; 
+    }
+
+    .footer-phone__group-text {
+        font-size: 1rem;
+    }
+
+    .for-whom__card-text {
+        font-size: 1rem;
+    }
+
+    .for-whom__cards {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .card1 {
+        grid-area: 2 / 3 / 3 / 2;
+    }
+
+    .card2 {
+        grid-area: 1 / 3 / 2 / 3;
+    }
+
+    .card3 {
+        grid-area: 2 / 3 / 2 / 5;
+    }
+    
+    .card4 {
+        grid-area: 3 / 5 / 3 / 3;
+    }
+
+    .card5 {
+        grid-area: 4 / 4 / 4 / 4;
+    }
+
+    .card6 {
+        grid-area: 4 / 4 / 4 / 3;
     }
 
 }
