--- a/style.css
+++ b/style.css
@@ -914,6 +914,10 @@ form {
         font-size: 1rem;
     }
 
+    .slider__input span {
+        padding-left: 10px !important;
+    }
+
     .price-group {
         padding-top: 1rem;
     }
