--- a/style.css
+++ b/style.css
@@ -649,7 +649,9 @@ input[type="date"] {
 .radio-inputs-wrapper {
     align-items: flex-start;
     display: flex;
+    flex-direction: column;
     gap: 10px;
+    padding-left: 0.938rem;
 }
 
 .radio-inputs {
@@ -666,7 +668,11 @@ input[type="date"] {
 }
 
 .input-item label {
-    line-height: 12px;
+    line-height: 14px;
+}
+
+.input-item input {
+    margin-top: 2px;
 }
 
 
@@ -1014,6 +1020,10 @@ input[type="date"] {
         height: 1.3rem;
         width: 1.3rem;
         margin-top: -8px;
+    }
+
+    .input-item label {
+        font-size: 0.875rem;
     }
 
     .for-whom__card-text {
